# mcp-server

./: .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  railway.json
.claude/: CLAUDE.md
.cursor/rules/: ainfera.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  release.yml  smoke-prod.yml
ainfera_mcp/: __init__.py  _client.py  asgi.py  guarded_tools.py  l1_guard.py  middleware.py  server.py
ainfera_mcp/prompts/: __init__.py  quickstart.py
ainfera_mcp/resources/: __init__.py  concepts.py  glossary.py  ontology.py
ainfera_mcp/tools/: __init__.py  agent_card.py  agents.py  audit.py  inference.py  trust_score.py  wallet.py
cloudflare/: README.md  smoke-mcp-keyed.sh  smoke-mcp.sh  worker.js  wrangler.toml
docs/: RAILWAY-DEPLOY.md  RAILWAY_DEPLOY.md
modal/: deploy.py
tests/: conftest.py  test_bearer_from_request.py  test_client.py  test_l1_guard.py  test_server.py  test_tools_paths.py
