[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainfera-mcp"
version = "0.1.0"
description = "MCP server exposing Ainfera's L1-L5 primitives as tools for MCP-compatible agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Ainfera Inc." }]
keywords = ["mcp", "ainfera", "agents", "inference", "model-context-protocol"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]
modal = ["modal>=0.64"]

[project.scripts]
ainfera-mcp = "ainfera_mcp.server:run"

[project.urls]
Homepage = "https://ainfera.ai"
Repository = "https://github.com/ainfera-ai/mcp-server"
Documentation = "https://docs.ainfera.ai/mcp"

[tool.hatch.build.targets.wheel]
packages = ["ainfera_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
